undo backend changes