@@ -15,22 +15,21 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.pucar.dristi.config.ServiceConstants.*;
 
 @Component
 public class IdgenUtil {
 
-	private final ObjectMapper mapper;
-	private final ServiceRequestRepository restRepo;
-	private final Configuration configs;
+	@Autowired
+	private ObjectMapper mapper;
 
 	@Autowired
-	public IdgenUtil(ObjectMapper mapper, ServiceRequestRepository restRepo, Configuration configs) {
-		this.mapper = mapper;
-		this.restRepo = restRepo;
-		this.configs = configs;
-	}
+	private ServiceRequestRepository restRepo;
+
+	@Autowired
+	private Configuration configs;
 
 	public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat,
 			Integer count) {
@@ -50,8 +49,6 @@ public class IdgenUtil {
 		if (CollectionUtils.isEmpty(idResponses))
 			throw new CustomException(IDGEN_ERROR, NO_IDS_FOUND_ERROR);
 
-		return idResponses.stream()
-				.map(IdResponse::getId)
-				.toList();
+		return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
 	}
 }
