@@ -15,21 +15,20 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
 import java.util.*;
-
+import java.util.stream.Collectors;
 @Slf4j
 @Service
 public class WorkflowUtil {
 
-	private final ServiceRequestRepository repository;
-	private final ObjectMapper mapper;
-	private final Configuration configs;
+	@Autowired
+	private ServiceRequestRepository repository;
 
 	@Autowired
-	public WorkflowUtil(ServiceRequestRepository repository, ObjectMapper mapper, Configuration configs) {
-		this.repository = repository;
-		this.mapper = mapper;
-		this.configs = configs;
-	}
+	private ObjectMapper mapper;
+
+	@Autowired
+	private Configuration configs;
+
 	/**
 	 * Searches the BussinessService corresponding to the businessServiceCode
 	 * Returns applicable BussinessService for the given parameters
@@ -125,13 +124,14 @@ public class WorkflowUtil {
 
 		if (!CollectionUtils.isEmpty(workflow.getAssignes())) {
 			List<User> users = workflow.getAssignes().stream()
-					.map(uuid -> {
-						User user = new User();
-						user.setUuid(uuid);
-						return user;
-					})
-					.toList();
-		processInstance.setAssignes(users);
+			    .map(uuid -> {
+			      User user = new User();
+			      user.setUuid(uuid);
+			      return user;
+			    })
+			    .collect(Collectors.toList());
+
+			processInstance.setAssignes(users);
 		}
 
 		return processInstance;
@@ -151,11 +151,8 @@ public class WorkflowUtil {
 			List<String> userIds = null;
 
 			if (!CollectionUtils.isEmpty(processInstance.getAssignes())) {
-				userIds = processInstance.getAssignes().stream()
-						.map(User::getUuid)
-						.toList();
+				userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
 			}
-
 
 			Workflow workflow = Workflow.builder().action(processInstance.getAction()).assignes(userIds)
 					.comments(processInstance.getComment()).documents(processInstance.getDocuments()).build();
